ping-pong/manifests/statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-pingpong-stset
  namespace: exercises
spec:
  serviceName: postgres-pingpong-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pingpong-app
  template:
    metadata:
      labels:
        app: postgres-pingpong-app
    spec:
      containers:
        - name: ping-pong
          image: titunidoc/devops_pingpong:2.714
        - name: db
          image: postgres
          ports:
            - name: web
              containerPort: 5432
          volumeMounts: 
          - name: postgres-data-storage
            mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
        namespace: exercises
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres-pingpong-app
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: ClusterIP
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
  selector:
    app: postgres-pingpong-app
